--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>2016 Daily Bruin Developers -30- Awards</title>
+		<title>Daily Bruin Developers -30- Awards | 2016</title>
 		<link rel="icon" type="image/png" href="http://dailybruin.com/img/favicons/favicon-32x32.png" sizes="32x32">
 		<meta property="og:title" content="Spring Sing 2016 - Daily Bruin" />
 		<meta property="og:description" content="2016 Daily Bruin Developers -30- Awards" />
 		<meta property="og:image" content="http://imgur.com/DZKeMXS" />
+		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 		
+		<h1> 2016 Daily Bruin Developers -30- Awards </h1>
+		 <div class="container">
+   			 <div class="row">
+     		 <div class="col-md-10" id="content">
+      		</div>
+    	</div>
+  		</div>
 	</head>
 	<body>
 	</body>
+	<script src="main.js"></script>
 </html>
