--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Daily Bruin Developers -30- Awards | 2016</title>
 		<link rel="icon" type="image/png" href="http://dailybruin.com/img/favicons/favicon-32x32.png" sizes="32x32">
-		<meta property="og:title" content="Spring Sing 2016 - Daily Bruin" />
+		<meta property="og:title" content="Daily Bruin Developers -30- Awards | 2016" />
 		<meta property="og:description" content="2016 Daily Bruin Developers -30- Awards" />
 		<meta property="og:image" content="http://imgur.com/DZKeMXS" />
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
