--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta property="og:image" content="http://imgur.com/DZKeMXS" />
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 		
-		<h1> 2016 Daily Bruin Developers -28- Awards </h1>
+		<h1 id="banner"> 2016 Daily Bruin Developers -28- Awards </h1>
 		 <div class="container">
    			 <div class="row">
      		 <div class="col-md-10" id="content">
