--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 	<head>
 		<title>Daily Bruin Developers -28- Awards | 2016</title>
+
+        <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Playball' rel='stylesheet' type='text/css'>
 		<link rel="icon" type="image/png" href="http://dailybruin.com/img/favicons/favicon-32x32.png" sizes="32x32">
         <link rel="stylesheet" href="main.css" />
 		<meta property="og:title" content="Daily Bruin Developers -28- Awards | 2016" />
